# triviagame

./: .dockerignore  .gitignore  Dockerfile  README.md  UPGRADE_SUMMARY.md  fly.toml  manage.py  pyproject.toml  record_commit.sh  requirements.txt
app/config/: _make_commit.sh  settings.py  urls.py
app/host/: admin.py  forms.py  models.py  urls.py  views.py
app/triviagame/: admin.py  apps.py  forms.py  models.py  views.py  widgets.py
data/: .env.example
docs/: EMOJI_PICKER_MACOS.md
game/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
game/migrations/: 0001_initial.py  0002_better_sorts.py  0003_team_ensure_unique_team_names.py  0004_remove_hostkey.py  0005_introduce_page_state.py  0006_move_page_state.py  0007_remove_open_boolean.py  0008_smoosh_team_members_field.py  0009_make_games_sortable.py  0010_add_hosting_permission.py  0011_multi_point_questions.py  0012_page_is_hidden.py  0013_introduce_game_state.py  0014_move_game_state.py  0015_remove_game_open_boolean.py  0016_alter_game_options.py  0017_page_hide_questions.py
game/templates/: base.html  create_team.html  healthcheck.txt  home.html  join_form.html  not_accepting_teams.html  rejoin.html
game/templatetags/: dict_extras.py
host/: admin.py  forms.py  models.py  tests.py  urls.py  view_utils.py  views.py  widgets.py
host/migrations/: 0001_add_host_perms.py  0002_alter_gamehostpermissions_options.py  0003_delete_janky_perms.py
host/templates/: host_base.html  (+1 more)
triviagame/: asgi.py  context_processors.py  middleware.py  settings.py  urls.py  wsgi.py
(+96 files in other folders)
