[project]
name = "triviagame"
version = "1.0.0"
description = "Host live trivia over video chat"
authors = [
  { name = "Matt Cooper", email = "vtbassmatt@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "daphne~=4.1",
    "dj-database-url~=3.0",
    "django~=6.0",
    "django-debug-toolbar>=6.0.0",
    "django-guardian~=3.0",
    "django-htmx~=1.19",
    "psycopg[binary]~=3.2",
]
