[project]
name = "triviagame"
version = "1.0.0"
description = "Host live trivia over video chat"
authors = [
  { name = "Matt Cooper", email = "vtbassmatt@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "daphne~=4.2",
    "dj-database-url~=3.0",
    "django~=6.0",
    "django-debug-toolbar~=6.1",
    "django-guardian~=3.2",
    "django-htmx~=1.27",
    "psycopg[binary]~=3.3",
]
